# ARTexplorer

./: .gitignore  CLAUDE.md  LICENSE  PlayerPiano-generator.js  README.md  art.css  artsteroids.html  index.html
Geometry Documents/: 4D-COORDINATES.md  ART-Gumball.md  Accelerant.md  Add-Polyhedra-Guide.md  Gravity-Grids-2.md  Logs.md  QUADRAY-RENAME.md  Thomson-Polyhedra.md  nuke-and-rebuild.md
Geometry documents/: 4D-Gimbal-Lock-Avoidance.md  Accelerant.md  Add-Polyhedra-Guide.md  Animations.md  CODE-QUALITY-AUDIT.md  Coordinates.md  Favicon.md  Feb18-Audit+Fix.md  Gravity-Grids-2.md  Gravity-Grids.md  Logs.md  Penrose-Spheres.md  Polygon-Rationalize.md  Prime-Cut-Extract.md  (+10 more)
artex-osx/: Cargo.toml  LICENSE  bundle.sh  gen-icon.py
artex-osx/docs/: ART-RUST-UI.md  ARTEX-AUDIT.md  ARTEX-HAIRYBALL.md  ARTEX-NORMALIZER.md  ARTEX-RATIONALE.md  README.md  RUST-METAL-BABYSTEPS.md  RUST-METAL-JUNIOR.md  RUST-METAL-SWIFT-TEENAGER.md
artex-osx/src/: animation.rs  app_state.rs  basis_arrows.rs  camera.rs  controls.rs  coordinates.rs  demos.rs  file_handler.rs  geometry.rs  grids.rs  log_console.rs  main.rs  papercut.rs  projections.rs  shader.wgsl  state_manager.rs  ui.rs  view_manager.rs
artex-osx/src/rt_math/: mod.rs  normalizer.rs  phi.rs  polygon.rs  quadray.rs  radicals.rs
artex-osx/src/rt_polyhedra/: geodesic.rs  helices.rs  matrices.rs  mod.rs  platonic.rs  primitives.rs  thomson.rs
artexplorer-native/: Cargo.toml
artexplorer-native/src/: camera.rs  geometry.rs  main.rs  shader.wgsl  ui.rs
artexplorer-native/src/rt_math/: cubics.rs  mod.rs  quadray.rs
artexplorer-native/src/rt_polyhedra/: platonic.rs
(+84 files in other folders)
